--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "sensio/distribution-bundle":            "~3.0",
         "sensio/framework-extra-bundle":         "~3.0",
         "doctrine/orm":                          "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle":              "~1.3@dev",
+        "doctrine/doctrine-bundle":              "v1.3.0-beta2",
         "doctrine/doctrine-cache-bundle":        "~1.0",
         "doctrine/doctrine-fixtures-bundle":     "~2.2",
         "twig/extensions":                       "~1.0",
