--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "sensio/distribution-bundle":            "~3.0",
         "sensio/framework-extra-bundle":         "~3.0",
         "doctrine/orm":                          "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle":              "~1.2",
+        "doctrine/doctrine-bundle":              "~1.3@dev",
         "doctrine/doctrine-cache-bundle":        "~1.0",
         "doctrine/doctrine-fixtures-bundle":     "~2.2",
         "twig/extensions":                       "~1.0",
@@ -28,7 +28,7 @@
         "white-october/pagerfanta-bundle":       "1.0.*@dev",
         "knplabs/knp-menu":                      "2.0.*@dev",
         "knplabs/knp-menu-bundle":               "2.0.*@dev",
-        "mopa/bootstrap-bundle":                 "3.*@dev",
+        "mopa/bootstrap-bundle":                 "~3.0@dev",
         "twbs/bootstrap":                        "v3.2.0",
         "winzou/state-machine-bundle":           "~0.2"
     },
