--- a/src/Bundle/CoreBundle/Resources/config/settings.yml
+++ b/src/Bundle/CoreBundle/Resources/config/settings.yml
@@ -11,6 +11,7 @@ parameters:
     accard.settings_schema.theme.class: Accard\Bundle\CoreBundle\Settings\ThemeSettingsSchema
     accard.settings_schema.patient.class: Accard\Bundle\CoreBundle\Settings\PatientSettingsSchema
     accard.settings_schema.diagnosis.class: Accard\Bundle\CoreBundle\Settings\DiagnosisSettingsSchema
+    accard.settings_schema.activity.class: Accard\Bundle\CoreBundle\Settings\ActivitySettingsSchema
     accard.settings_schema.behavior.class: Accard\Bundle\CoreBundle\Settings\BehaviorSettingsSchema
     accard.settings_schema.attribute.class: Accard\Bundle\CoreBundle\Settings\AttributeSettingsSchema
 
@@ -35,6 +36,11 @@ services:
         class: %accard.settings_schema.diagnosis.class%
         tags:
             - { name: accard.settings_schema, namespace: diagnosis }
+
+    accard.settings_schema.activity:
+        class: %accard.settings_schema.activity.class%
+        tags:
+            - { name: accard.settings_schema, namespace: activity }
 
     accard.settings_schema.behavior:
         class: %accard.settings_schema.behavior.class%
