--- a/src/Bundle/WebBundle/Resources/config/routing/backend/activity.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/backend/activity.yml
@@ -13,14 +13,16 @@ accard_backend_activity_design:
         _accard:
             template: AccardWebBundle:Backend/Activity:design.html.twig
 
-accard_backend_activity_prototype:
-    pattern: /prototype/{id}
-    methods: [GET]
-    requirements: { id: \d+ }
+accard_backend_activity_settings_update:
+    pattern: /settings/update
+    methods: [PUT, POST]
     defaults:
-        _controller: accard.controller.activity_prototype:showAction
+        namespace: activity
+        _controller: accard.controller.settings:updateAction
         _accard:
-            template: AccardWebBundle:Backend/Activity:showPrototype.html.twig
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: settings, action: update }
 
 accard_backend_activity_prototype_create:
     pattern: /prototype/new
@@ -29,7 +31,9 @@ accard_backend_activity_prototype_create:
         _controller: accard.controller.activity_prototype:createAction
         _accard:
             template: AccardWebBundle:Backend/Activity:prototypeCreate.html.twig
-            redirect: accard_backend_activity_design
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: prototype, action: create, id: resource.id }
 
 accard_backend_activity_prototype_update:
     pattern: /prototype/{id}/edit
@@ -38,4 +42,50 @@ accard_backend_activity_prototype_update:
         _controller: accard.controller.activity_prototype:updateAction
         _accard:
             template: AccardWebBundle:Backend/Activity:prototypeUpdate.html.twig
-            redirect: accard_backend_activity_design
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: prototype, action: update, id: resource.id }
+
+accard_backend_activity_prototype_delete:
+    pattern: /{id}
+    methods: [DELETE]
+    requirements: { id: \d+ }
+    defaults:
+        _controller: accard.controller.activity_prototype:deleteAction
+        _accard:
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: prototype, action: delete }
+
+accard_backend_activity_field_create:
+    pattern: /field/new
+    methods: [GET, POST]
+    defaults:
+        _controller: accard.controller.activity_prototype_field:createAction
+        _accard:
+            template: AccardWebBundle:Backend/Activity:fieldCreate.html.twig
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: field, action: create, id: resource.id }
+
+accard_backend_activity_field_update:
+    pattern: /field/{id}/edit
+    methods: [GET, PUT, POST]
+    defaults:
+        _controller: accard.controller.activity_prototype_field:updateAction
+        _accard:
+            template: AccardWebBundle:Backend/Activity:fieldUpdate.html.twig
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: field, action: update, id: resource.id }
+
+accard_backend_activity_field_delete:
+    pattern: /field/{id}
+    methods: [DELETE]
+    requirements: { id: \d+ }
+    defaults:
+        _controller: accard.controller.activity_prototype_field:deleteAction
+        _accard:
+            redirect:
+                route: accard_backend_activity_design
+                parameters: { type: field, action: delete }
