WIP on develop: ab65984 Added prototype provider and repositories.

--- a/src/Bundle/ActivityBundle/Resources/config/doctrine/model/Activity.orm.yml
+++ b/src/Bundle/ActivityBundle/Resources/config/doctrine/model/Activity.orm.yml
@@ -18,3 +18,10 @@ Accard\Component\Activity\Model\Activity:
         activityDate:
             type: date
             nullable: false
+
+    oneToMany:
+        fields:
+            targetEntity: Accard\Component\Activity\Model\FieldValueInterface
+            mappedBy: subject
+            orphanRemoval: true
+            cascade: ["all"]
