--- a/src/Bundle/ActivityBundle/Resources/config/services.yml
+++ b/src/Bundle/ActivityBundle/Resources/config/services.yml
@@ -1,7 +1,29 @@
+# This file is part of the Accard package.
+#
+# (c) University of Pennsylvania
+#
+# For the full copyright and license information, please view the LICENSE
+# file that was distributed with this source code.
+
 parameters:
-#    accard_activity.example.class: Accard\Bundle\ActivityBundle\Example
+
+    accard.builder.activity.class: Accard\Component\Activity\Builder\ActivityBuilder
 
 services:
-#    accard_activity.example:
-#        class: %accard_activity.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+
+    accard.form.type.activity:
+        class: %accard.form.type.activity.class%
+        arguments:
+            - %accard.model.activity.class%
+            - %accard.validation_group.activity%
+            - @accard.builder.activity
+        tags:
+            - { name: form.type, alias: accard_activity }
+
+    accard.builder.activity:
+        class: %accard.builder.activity.class%
+        arguments:
+            - @accard.manager.activity
+            - @accard.repository.activity
+            - @accard.repository.activity_field
+            - @accard.repository.activity_field_value
