Created doctrine extenstion to improve fixture creation and maintenance

--- a/src/Bundle/CoreBundle/Resources/config/services.yml
+++ b/src/Bundle/CoreBundle/Resources/config/services.yml
@@ -9,6 +9,9 @@ parameters:
 
     accard.form.extension.accard_attribute.class: Accard\Bundle\CoreBundle\Form\Extension\AttributeTypeExtension
     accard.provider.import_patient.class: Accard\Bundle\CoreBundle\Provider\ImportPatientProvider
+    accard.fixture.manager.class: Accard\Bundle\CoreBundle\DataFixtures\FixtureManager
+    accard.fixture.option_builder.class: Accard\Bundle\CoreBundle\DataFixtures\OptionBuilder
+    accard.fixture.option_value_builder.class: Accard\Bundle\CoreBundle\DataFixtures\OptionValueBuilder
 
 services:
 
@@ -16,4 +19,17 @@ services:
         class: %accard.provider.import_patient.class%
         arguments:
             - @accard.repository.import_patient
+
+    accard.fixture.manager:
+        class: %accard.fixture.manager.class%
+
+    accard.fixture.option_builder:
+        class: %accard.fixture.option_builder.class%
+        calls:
+            - [setOptionClass, ["%accard.model.option.class%"]]
+
+    accard.fixture.option_value_builder:
+        class: %accard.fixture.option_value_builder.class%
+        calls:
+            - [setOptionValueClass, ["%accard.model.optionvalue.class"]]
 
