Added Doctrine cascading to prototypes, fields and options.

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -33,5 +33,6 @@ Accard\Component\Field\Model\Field:
     manyToOne:
         option:
             targetEntity: Accard\Component\Option\Model\OptionInterface
+            cascade: ["persist"]
             joinColumn:
                 name: optionId
