Changes in phase flow.

--- a/src/Bundle/CoreBundle/Resources/config/flows.yml
+++ b/src/Bundle/CoreBundle/Resources/config/flows.yml
@@ -8,6 +8,8 @@
 parameters:
     accard.flow.scenario.basic_patient.class: Accard\Bundle\CoreBundle\Flow\Scenario\BasicPatientScenario
     accard.flow.step.create_patient.class: Accard\Bundle\CoreBundle\Flow\Step\CreatePatientStep
+    accard.flow.scenario.create_diagnosis_phases.class: Accard\Bundle\CoreBundle\Flow\Scenario\CreateDiagnosisPhasesScenario
+    accard.flow.step.create_diagnosis_phases.class: Accard\Bundle\CoreBundle\Flow\Step\CreateDiagnosisPhasesStep
     accard.flow.step.create_diagnosis.class: Accard\Bundle\CoreBundle\Flow\Step\CreateDiagnosisStep
     accard.flow.step.create_pre_existing_conditions.class : Accard\Bundle\CoreBundle\Flow\Step\CreatePreExistingConditionsStep
     accard.flow.step.finalize_patient.class: Accard\Bundle\CoreBundle\Flow\Step\FinalizePatientStep
@@ -15,6 +17,20 @@ parameters:
     accard.form.extension.accard_behavior.class: Accard\Bundle\CoreBundle\Form\Extension\BehaviorTypeExtension
 
 services:
+    accard.flow.create_diagnosis_phases:
+        class: %accard.flow.scenario.create_diagnosis_phases.class%
+        argument:
+            - "@accard.manager.create_diagnosis_phases"
+        tags:
+            - { name: accard.flow.scenario, alias: create_diagnosis_phases }
+    
+    accard.flow.step.create_diagnosis_phases:
+        class: %accard.flow.step.create_diagnosis_phases.class%
+        arguments:
+            - @accard.repository.diagnosis_phase
+            - %accard.model.diagnosis_phase.class%
+        tags:
+            - { name: accard.flow.step, alias: create_diagnosis_phases }
 
     accard.flow.scenario.basic_patient:
         class: %accard.flow.scenario.basic_patient.class%
