Fixed the cascading data fixture creation problem

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -19,6 +19,7 @@ Accard\Component\Field\Model\Field:
             type: string
             length: 120
             nullable: false
+            unique: true
         presentation:
             type: string
             length: 120
