--- a/src/Bundle/PatientBundle/Resources/config/services.yml
+++ b/src/Bundle/PatientBundle/Resources/config/services.yml
@@ -9,6 +9,7 @@ parameters:
 
     accard.builder.patient.class: Accard\Component\Patient\Builder\PatientBuilder
     accard.provider.patient.class: Accard\Bundle\PatientBundle\Provider\PatientProvider
+    accard.form.type.patient_choice.class: Accard\Bundle\PatientBundle\Form\Type\PatientChoiceType
 
 services:
 
@@ -19,8 +20,13 @@ services:
             - %accard.validation_group.patient%
             - @accard.builder.patient
             - @accard.option.provider
-        tags:
-            - { name: form.type, alias: accard_patient }
+        tags: [{ name: form.type, alias: accard_patient }]
+
+    accard.form.type.patient_choice:
+        class: %accard.form.type.patient_choice.class%
+        arguments:
+            - %accard.model.patient.class%
+        tags: [{ name: form.type, alias: accard_patient_choice }]
 
     accard.builder.patient:
         class: %accard.builder.patient.class%
