--- a/src/Bundle/CoreBundle/Resources/config/app/main.yml
+++ b/src/Bundle/CoreBundle/Resources/config/app/main.yml
@@ -16,5 +16,36 @@ doctrine_cache:
 
 mopa_bootstrap:
     form:
+        templating: AccardWebBundle::forms.html.twig
         horizontal: false
         render_optional_text: false
+
+sensio_framework_extra:
+    view:
+        annotations: false
+
+fos_rest:
+    param_fetcher_listener: false
+    body_listener: true
+    format_listener: true
+    view:
+        view_response_listener: 'force'
+        formats:
+            xml: true
+            json: true
+        templating_formats:
+            html: true
+        force_redirects:
+            html: true
+        failed_validation: HTTP_BAD_REQUEST
+        default_engine: twig
+    routing_loader:
+        default_format: json
+
+jms_serializer:
+    metadata:
+        auto_detection: false
+        directories:
+            core:
+                namespace_prefix: Accard\\Component\\Patient
+                path: @AccardCoreBundle/Resources/config/serializer
