--- a/src/Bundle/WebBundle/Resources/config/forms.yml
+++ b/src/Bundle/WebBundle/Resources/config/forms.yml
@@ -8,23 +8,26 @@
 parameters:
 
     accard.form.type_extension.date_defaults.class: Accard\Bundle\WebBundle\Form\Extension\DateDefaultsExtension
+    accard.form.type.typeahead.class: Accard\Bundle\ResourceBundle\Form\Type\TypeaheadType
 
 services:
 
     accard.form.type_extension.date:
         class: %accard.form.type_extension.date_defaults.class%
         arguments: ['date']
-        tags:
-            - { name: form.type_extension, alias: date }
+        tags: [{ name: form.type_extension, alias: date }]
 
     accard.form.type_extension.datetime:
         class: %accard.form.type_extension.date_defaults.class%
         arguments: ['datetime']
-        tags:
-            - { name: form.type_extension, alias: datetime }
+        tags: [{ name: form.type_extension, alias: datetime }]
 
     accard.form.type_extension.birthday:
         class: %accard.form.type_extension.date_defaults.class%
         arguments: ['birthday']
-        tags:
-            - { name: form.type_extension, alias: birthday }
+        tags: [{ name: form.type_extension, alias: birthday }]
+
+    accard.form.type.typeahead:
+        class: %accard.form.type.typeahead.class%
+        arguments: ['@doctrine']
+        tags: [{ name: form.type, alias: accard_typeahead }]
