--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "doctrine/doctrine-bundle":              "~1.3@dev",
         "doctrine/doctrine-cache-bundle":        "~1.0",
         "doctrine/doctrine-fixtures-bundle":     "~2.2",
+        "doctrine/doctrine-migrations-bundle":   "2.1.*@dev",
         "twig/extensions":                       "~1.0",
         "incenteev/composer-parameter-handler":  "~2.0",
         "friendsofsymfony/rest-bundle":          "~1.0",
