--- a/src/Bundle/CoreBundle/Resources/config/app/main.yml
+++ b/src/Bundle/CoreBundle/Resources/config/app/main.yml
@@ -24,8 +24,14 @@ sensio_framework_extra:
     view:
         annotations: false
 
+doctrine_migrations:
+    dir_name: %kernel.root_dir%/migrations
+    namespace: Application\Migrations
+    table_name: migration_versions
+    name: Accard Migrations
+
 fos_rest:
-    param_fetcher_listener: false
+    param_fetcher_listener: true
     body_listener: true
     format_listener: true
     view:
@@ -47,5 +53,5 @@ jms_serializer:
         auto_detection: false
         directories:
             core:
-                namespace_prefix: Accard\\Component\\Patient
+                namespace_prefix: Accard\\
                 path: @AccardCoreBundle/Resources/config/serializer
