--- a/src/Bundle/CoreBundle/Resources/config/app/main.yml
+++ b/src/Bundle/CoreBundle/Resources/config/app/main.yml
@@ -25,7 +25,7 @@ sensio_framework_extra:
         annotations: false
 
 doctrine_migrations:
-    dir_name: %kernel.root_dir%/migrations
+    dir_name: %kernel.root_dir%/migrations/%database_driver%
     namespace: Application\Migrations
     table_name: migration_versions
     name: Accard Migrations
