--- a/src/Bundle/CoreBundle/Resources/config/doctrine/model/Diagnosis.orm.yml
+++ b/src/Bundle/CoreBundle/Resources/config/doctrine/model/Diagnosis.orm.yml
@@ -26,7 +26,7 @@ Accard\Component\Core\Model\Diagnosis:
 #            orphanRemoval: true
 #            cascade: ["persist", "remove"]
         phases:
-            targetEntity: Accard\Component\Core\Model\DiagnosisPhaseInterface
-            mappedBy: diagnosis
+            targetEntity: Accard\Component\Core\Model\DiagnosisPhaseInstanceInterface
+            mappedBy: target
             orphanRemoval: true
             cascade: ["persist", "remove"]
