Refactored patient phases forms and views for convenient data entry.

--- a/src/Bundle/CoreBundle/Resources/config/forms.yml
+++ b/src/Bundle/CoreBundle/Resources/config/forms.yml
@@ -31,7 +31,7 @@ services:
         class: %accard.form.type.accard_patient_phase_instance.class%
         arguments:
             - %accard.model.patient_phase_instance.class%
-            - $accard.model.patient_phase.class%
+            - %accard.model.patient_phase.class%
             - %accard.model.patient.class%
             - %accard.validation_group.patient_phase_instance%
         tags:
