--- a/src/Bundle/DiagnosisBundle/Resources/config/forms.yml
+++ b/src/Bundle/DiagnosisBundle/Resources/config/forms.yml
@@ -21,7 +21,7 @@ services:
             - %accard.validation_group.diagnosis%
             - @accard.builder.diagnosis
             - @accard.provider.diagnosis_code
-            - @accard.option.provider
+            - @accard.provider.option
         tags:
             - { name: form.type, alias: accard_diagnosis }
 
