--- a/src/Bundle/CoreBundle/Resources/config/forms.yml
+++ b/src/Bundle/CoreBundle/Resources/config/forms.yml
@@ -8,14 +8,18 @@
 parameters:
 
     accard.form.type.accard_patient_phase.class: Accard\Bundle\CoreBundle\Form\Type\PatientPhaseType
+    accard.form.type.accard_patient_phase_choice.class: Accard\Bundle\CoreBundle\Form\Type\PatientPhaseChoiceType
     accard.form.type.accard_patient_phase_instance.class: Accard\Bundle\CoreBundle\Form\Type\PatientPhaseInstanceType
     accard.form.type.accard_diagnosis_phase.class: Accard\Bundle\CoreBundle\Form\Type\DiagnosisPhaseType
+    accard.form.type.accard_diagnosis_phase_choice.class: Accard\Bundle\CoreBundle\Form\Type\DiagnosisPhaseChoiceType
     accard.form.type.accard_diagnosis_phase_instance.class: Accard\Bundle\CoreBundle\Form\Type\DiagnosisPhaseInstanceType
     accard.form.extension.accard_attribute.class: Accard\Bundle\CoreBundle\Form\Extension\AttributeTypeExtension
     accard.form.extension.accard_diagnosis.class: Accard\Bundle\CoreBundle\Form\Extension\DiagnosisTypeExtension
     accard.form.extension.accard_behavior.class: Accard\Bundle\CoreBundle\Form\Extension\BehaviorTypeExtension
     accard.form.extension.accard_activity.class: Accard\Bundle\CoreBundle\Form\Extension\ActivityTypeExtension
     accard.form.type.patient_diagnoses.class: Accard\Bundle\CoreBundle\Form\Type\PatientDiagnosesType
+
+    accard.form.type.patient_filter.class: Accard\Bundle\CoreBundle\Form\Type\Filter\PatientFilterType
 
 services:
 
@@ -24,8 +28,13 @@ services:
         arguments:
             - %accard.model.patient_phase.class%
             - %accard.validation_group.patient_phase%
-        tags:
-            - { name: form.type, alias: accard_patient_phase }
+        tags: [{ name: form.type, alias: accard_patient_phase }]
+
+    accard.form.type.accard_patient_phase_choice:
+        class: %accard.form.type.accard_patient_phase_choice.class%
+        arguments:
+            - %accard.model.patient_phase.class%
+        tags: [{ name: form.type, alias: accard_patient_phase_choice }]
 
     accard.form.type.accard_patient_phase_instance:
         class: %accard.form.type.accard_patient_phase_instance.class%
@@ -34,16 +43,20 @@ services:
             - %accard.model.patient_phase.class%
             - %accard.model.patient.class%
             - %accard.validation_group.patient_phase_instance%
-        tags:
-            - { name: form.type, alias: accard_patient_phase_instance }
+        tags: [{ name: form.type, alias: accard_patient_phase_instance }]
 
     accard.form.type.accard_diagnosis_phase:
         class: %accard.form.type.accard_diagnosis_phase.class%
         arguments:
             - %accard.model.diagnosis_phase.class%
             - %accard.validation_group.diagnosis_phase%
-        tags:
-            - { name: form.type, alias: accard_diagnosis_phase }
+        tags: [{ name: form.type, alias: accard_diagnosis_phase }]
+
+    accard.form.type.accard_diagnosis_phase_choice:
+        class: %accard.form.type.accard_diagnosis_phase_choice.class%
+        arguments:
+            - %accard.model.diagnosis_phase.class%
+        tags: [{ name: form.type, alias: accard_diagnosis_phase_choice }]
 
     accard.form.type.accard_diagnosis_phase_instance:
         class: %accard.form.type.accard_diagnosis_phase_instance.class%
@@ -52,22 +65,19 @@ services:
             - $accard.model.diagnosis_phase.class%
             - %accard.model.diagnosis.class%
             - %accard.validation_group.diagnosis_phase_instance%
-        tags:
-            - { name: form.type, alias: accard_diagnosis_phase_instance }
+        tags: [{ name: form.type, alias: accard_diagnosis_phase_instance }]
 
     accard.form.extension.accard_attribute:
         class: %accard.form.extension.accard_attribute.class%
         arguments:
             - %accard.model.patient.class%
-        tags:
-            - { name: form.type_extension, alias: accard_attribute }
+        tags: [{ name: form.type_extension, alias: accard_attribute }]
 
     accard.form.extension.accard_behavior:
         class: %accard.form.extension.accard_behavior.class%
         arguments:
             - %accard.model.patient.class%
-        tags:
-            - { name: form.type_extension, alias: accard_behavior }
+        tags: [{ name: form.type_extension, alias: accard_behavior }]
 
     accard.form.extension.accard_diagnosis:
         class: %accard.form.extension.accard_diagnosis.class%
@@ -78,8 +88,7 @@ services:
         arguments:
             - %accard.model.patient.class%
             - @accard.repository.diagnosis
-        tags:
-            - { name: form.type_extension, alias: accard_activity }
+        tags: [{ name: form.type_extension, alias: accard_activity }]
 
 
     accard.form.type.patient_diagnoses:
@@ -87,5 +96,8 @@ services:
         arguments:
             - %accard.model.patient.class%
             - @accard.form.type.diagnosis
-        tags:
-            - { name: form.type, alias: accard_patient_diagnoses }
+        tags: [{ name: form.type, alias: accard_patient_diagnoses }]
+
+    accard.form.type.patient_filter:
+        class: %accard.form.type.patient_filter.class%
+        tags: [{ name: form.type, alias: accard_patient_filter }]
