Added PDS setting to patient schema, integrated with the PDS bundle very loosely.

--- a/src/Bundle/SettingsBundle/Resources/config/services.yml
+++ b/src/Bundle/SettingsBundle/Resources/config/services.yml
@@ -37,3 +37,4 @@ services:
 
     accard.settings.schema_registry:
         class: %accard.settings.schema_registry.class%
+        arguments: ['@service_container']
