--- a/src/Bundle/SampleBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/SampleBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -5,7 +5,6 @@
 # For the full copyright and license information, please view the LICENSE
 # file that was distributed with this source code.
 
-Accard\Component\Core\Model\WholeBloodSample:
+Accard\Component\Sample\Model\Field:
     type: mappedSuperclass
-    table: accard_whole_blood_sample
-    repositoryClass: Accard\Bundle\SampleBundle\Doctrine\ORM\SampleRepository
+    table: accard_sample_prototype_field
