--- a/src/Bundle/SampleBundle/Resources/config/doctrine/model/Prototype.orm.yml
+++ b/src/Bundle/SampleBundle/Resources/config/doctrine/model/Prototype.orm.yml
@@ -5,7 +5,6 @@
 # For the full copyright and license information, please view the LICENSE
 # file that was distributed with this source code.
 
-Accard\Component\Core\Model\TissueSample:
+Accard\Component\Sample\Model\Prototype:
     type: mappedSuperclass
-    table: accard_tissue_sample
-    repositoryClass: Accard\Bundle\SampleBundle\Doctrine\ORM\SampleRepository
+    table: accard_sample_prototype
