Fixed service definition problems with both core bundle phase instance types. They were never updated along with the changes to the phase system, and created issues with the workflow.

--- a/src/Bundle/CoreBundle/Resources/config/forms.yml
+++ b/src/Bundle/CoreBundle/Resources/config/forms.yml
@@ -62,7 +62,7 @@ services:
         class: %accard.form.type.accard_diagnosis_phase_instance.class%
         arguments:
             - %accard.model.diagnosis_phase_instance.class%
-            - $accard.model.diagnosis_phase.class%
+            - %accard.model.diagnosis_phase.class%
             - %accard.model.diagnosis.class%
             - %accard.validation_group.diagnosis_phase_instance%
         tags: [{ name: form.type, alias: accard_diagnosis_phase_instance }]
