Created multiple choice option selector fields.

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -28,6 +28,9 @@ Accard\Component\Field\Model\Field:
             type: string
             length: 36
             nullable: false
+        allowMultiple:
+            type: boolean
+            nullable: false
         configuration:
             type: array
 
